small alignment fixes for header + footer

--- a/src/styles/components/footer.module.css
+++ b/src/styles/components/footer.module.css
@@ -12,11 +12,17 @@
   max-width: var(--width-site);
   margin: auto;
   padding: var(--space-md) 0 var(--space-lg);
-  border-top: var(--border-line);
+  border-top: 1px solid var(--color-text-heading)
+}
+
+.navigation {
+  display: block;
 }
 
 .list {
   display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .listItem {
@@ -47,7 +53,7 @@
   display: block; 
 
   color: var(--color-text-heading);
-  transition: color var(--trans-timing) var(--trans-ease);
+  transition: color var(--trans-basic);
 }
 
 .icon:hover,
