--- a/src/styles/components/header.module.css
+++ b/src/styles/components/header.module.css
@@ -18,6 +18,7 @@
 
 .list {
   display: flex;
+  align-items: center;
 }
 
 .listItem {
@@ -48,7 +49,7 @@
   display: block; 
 
   color: var(--color-text-heading);
-  transition: color var(--trans-timing) var(--trans-ease);
+  transition: color var(--trans-basic);
 }
 
 .githubIcon:hover,
@@ -67,7 +68,7 @@
   height: 1px;
   width: 22px;
   background-color: var(--color-text-heading);
-  transition: transform var(--trans-timing) var(--trans-ease);
+  transition: transform var(--trans-basic);
 }
 
 /* mobile menu open */
