--- a/src/styles/global/base.css
+++ b/src/styles/global/base.css
@@ -1,5 +1,5 @@
 html {
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   /* reset default font-size to 10px for easier calculations (62.5% of 16px [browser default] = 10px) */
   font-size: 62.5%;
@@ -15,4 +15,18 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: var(--fweight-bold);
+}
+
+p,
+a {
+  font-weight: var(--fweight-normal);
 }
